--- a/sharedcomponents/header/header.html
+++ b/sharedcomponents/header/header.html
@@ -16,7 +16,7 @@
 
 
     <div class="options">
-       <a href="../../main/mainindex.html">Home</a>
+       <a href="../../main/index.html">Home</a>
        <a  href="#" data-page="about">About</a>
        <a  href="#" data-page="services">Services</a>
        <a   href="#" data-page="portfolio">Portfolio</a>
