--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="./main.css" rel="stylesheet" type="text/css">
     <title>monarch</title>
 </head>
 
@@ -36,7 +36,7 @@
     </div>
 </div>
 <div id="footer"></div>
-   <script src="index.js"></script>
+   <script src="./index.js"></script>
 </body>
 
 </html>
